--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 port = 3300
-connection_url="mongodb+srv://admin:admin@eshop.ijmwlug.mongodb.net/eshop-data"
+MONGO_URI="mongodb+srv://admin:admin@eshop.ijmwlug.mongodb.net/eshop-data"
 secret = secret
